# coding-tentacle

./: .dockerignore  .gitignore  00_UEBERSICHT_6_GEHIRN_ARTEN.md  10_schicht_diagnose.py  11_papers_gleichungen_group1.md  11_papers_gleichungen_group2.md  11_papers_gleichungen_group3.md  36_kognitive_architekturen_research.md  47_grosser_check.py  BOTTLENECK_ANALYSIS.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EFFICIENCY_COMPATIBILITY.json  FORSCHUNGSMAPPE.md  GROSSER_CHECK_REPORT.json  LICENSE  MASTER_TEST_PROTOKOLL.json  RC2_DEEP_BUG_HUNT_REPORT.json  RC50_ROOT_CAUSE_BRAIN.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  UNIVERSAL_GAP_ANALYSIS.json  bottleneck_analysis.py  br_scientific_method.py  brains_reaudit.py  config.py  deep_bug_hunt.py  efficiency_compatibility.py  escalation_logic.py  fixed_memory.py  forschungs_audit.py  get_header.py  inhibitory_control.py  master_test_protocol.py  mini_tentacle_system.py  minimal_orchestrator.py  patch_probe.py  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: tests.yml
03_graph_struktur/: graph_brain.py
04_reinforcement/: rl_brain.py
06_act_r_spreading/: causal_brain.py  friston_brain.py  mandelbrot_brain.py
07_experimente/: 10_neue_testarten.py  benchmark_10_szenarien.json  quick_test_30.py  run_benchmark.py
14_fuzzy/: fuzzy_brain.py
15_ensemble/: ensemble_brain.py
16_game_theory/: game_theory_brain.py
17_gradient/: gradient_brain.py
19_markov/: markov_brain.py
22_memory_palace/: palace_brain.py
26_hypernetwork/: hyper_brain.py
30_hierarchical_rl/: hrl_brain.py
31_predictive_coding/: pc_hierarchy_brain.py
32_hopfield/: hopfield_brain.py
33_soar/: soar_brain.py
34_neural_turing/: ntm_brain.py
37_deep_predictive/: deep_pc_brain.py
38_chunking/: chunking_brain.py
39_pln_reasoning/: pln_brain.py
40_metta_cognitive/: metta_brain.py
42_beer_vsm/: vsm_brain.py
43_maturana_autopoiesis/: autopoiesis_brain.py
44_bateson_learning/: bateson_brain.py
45_foerster_second_order/: second_order_brain.py
46_prigogine_dissipative/: dissipative_brain.py
49_temporal_awareness/: temporal_brain.py
50_counterfactual/: counterfactual_brain.py
51_brain_mesh/: mesh_brain.py
55_imitation/: imitation_brain.py
56_code_context/: code_context_brain.py
58_wolfram_ca/: wolfram_brain.py
61_levin_basal/: basal_brain.py
62_explainability/: explain_brain.py
64_adversarial/: adversarial_brain.py
67_superposition/: quantum_brain.py
68_emotion/: emotion_brain.py
69_human_collab/: collab_brain.py
71_symbol_grounding/: sg_brain.py
archive/islands/: README.md
archive/islands/classifier/: semantic_classifier.py  unified_classifier.py
archive/islands/languages/: java_support.py  shell_support.py
archive/islands/memory/: hybrid_retrieval.py
archive/islands/orchestrator/: metacognitive_evaluator.py  minimal_orchestrator.py  (+1 more)
benchmarks/: RC67_ERROR_AUTOPSY.md  benchmark_runner.py  swe_bench_runner.py
examples/: example_nullpointer.py
papers/: CODING_TENTACLE_10.0.V.md
real_results/: comparison_report.json  ct_vs_baseline_report.json
releases/: RELEASE_NOTES_10.0.V.md
research/: 09_kybernetiker_liste.md  10_kybernetiker_nach_themen.md  12_benchmark_tests.md  37_5_punkte_tiefen_research.md  CT_OKTOPUS_30_PAPERS.md
research/2026-06-23-brain-landscape/: 00_MASTER_SYNTHESE.md  1_kybernetische_gehirne.md  2_sicherheits_architekturen.md  3_metacognitive_multi_brain.md  4_top10_wissenschaftliche_seiten.md  TODO.md
scripts/: ct_llm_engine.py  full_regression.py  integration_test.py  oc_vs_codex.py  public_demo.py  quixbugs_runner.py  swebench_adapter.py  w1_w4_wiring_audit_tests.py
scripts/rc12_benchmark/: __init__.py  batch_runner.py  benchmark_runner.py  curate_datasets.py  explainability.py  metric_collector.py  real_pipeline.py  report.py  report_generator.py
src/coding_tentacle/: __init__.py  cli.py  config.py
src/coding_tentacle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ast_safety.py  test_brains.py  test_core.py  test_safety.py  test_tournament_hygiene.py
~/.coding_tentacle/: procedures.json
(+170 files in other folders)
