[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tentacle"
version = "0.1.0"
description = "Octopus-inspired bug-fixing agent — hypothesize, test, falsify. Safety-first."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David", email = "david@coding-tentacle.dev"}
]
keywords = ["ai", "debugging", "bug-fixing", "cognitive-architecture", "octopus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/nessos666/coding-tentacle"
Documentation = "https://github.com/nessos666/coding-tentacle/docs"
Repository = "https://github.com/nessos666/coding-tentacle"

[tool.setuptools.packages.find]
where = ["src"]
