[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-tentacle"
version = "1.0.0rc1"
description = "Safety-first guardian layer for LLM-based code fixing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "David", email = "nessos6666@gmail.com"}]
keywords = ["ai-safety", "code-repair", "llm-guardian", "self-learning", "bug-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]
dev = ["ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/nessos666/coding-tentacle"
Issues = "https://github.com/nessos666/coding-tentacle/issues"

[project.scripts]
coding-tentacle = "coding_tentacle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_tentacle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short"]
